kube-config/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logstash-test-test-ingress
  namespace: logstash-test-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: logstash-test-test.dluserver.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logstash-test
                port:
                  number: 8080
